# SketchrQt

./: CMakeLists.txt  README.md
res/: resources.qrc
src/: Main.java  imagemanipulator.cpp  imagemanipulator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  screenselection.cpp  screenselection.h
